# lavaps

./: Makefile.am  Makefile.in  README  README.md  acinclude.m4  aclocal.m4  config.h.in  configure  configure.ac  configure.gtk.ac  configure.tcltk.ac  lavaps.spec.in
doc/: Makefile.am  Makefile.in  master.pod  pod2help  podprune
po/: Makefile.in.in  POTFILES.in  es.gmo  es.po  lavaps.pot  ru.gmo  ru.po
src/: Makefile.am  Makefile.in  blob.cc  blob.hh  change_tracking.hh  color.cc  compat.cc  compat.hh  const_str.hh  dmalloc_support.cc  entry_trace.cc  entry_trace.hh  gtk_blob.cc  gtk_blob.hh  gtk_blob_base.cc  gtk_blob_base.hh  gtk_blob_conf.cc  gtk_blob_conf.hh  gtk_blob_splash.cc  gtk_blob_splash.hh  gtk_compat.cc  gtk_compat.hh  gtk_lava_help.cc  gtk_lava_help.hh  gtk_xpms.cc  help.tcl  lava.tcl  lava_help.tcl  lava_signal.cc  lava_signal.hh  lavaps.schemas  main.cc  main.hh  process_list.cc  process_list.hh  process_model.cc  process_model.hh  process_scan.hh  process_scan_aix.cc  process_scan_bsd.cc  (+18 more)
src/IMAGES/: gripper_2_16.xpm  gripper_2_32.xpm  gripper_2_64.xpm  icon_128.xpm  icon_16.xpm  icon_32.xpm  icon_64.xpm  menu_2_16.xpm  menu_2_32.xpm  menu_2_64.xpm
src/freebsd/port/: Makefile.in
src/freebsd/port/pkg/: DESCR  PLIST
src/linux/: Makefile.am  Makefile.in
src/linux/proc/: Makefile  alloc.c  compare.c  devname.c  ksym.c  output.c  pwcache.c  readproc.c  readproc.h  signals.c  status.c  sysinfo.c  version.c  version.h
tcl2cc/: Makefile.am  Makefile.in  README  tcl2cc.c
